# Code-Review-Assistant

./: .gitignore  README.md  docker-compose.yml
backend/: alter_db.py  app.py  dataset.py  datatset.py  db.sqlite  empty_db.py  environment.yml  llm_utils.py  pyproject.toml  rag_utils.py  requirements.txt  s3_utils.py  worker.py  worker_windows.py
extension/: package.json
extension/src/: api.ts  extension.ts
